--- a/Buoy Project-Data import.Rmd
+++ b/Buoy Project-Data import.Rmd
@@ -8,7 +8,7 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-# Data Collection
+# 1 Data Collection
 
 To begin with,we need to collect data from the National Data Buoy Center (NDBC)-Station 4403.
 
@@ -35,7 +35,7 @@ for (i in 1:n){
 }
 ```
 
-## Bind the data from 1987-1999
+## 1.1 Bind the data from 1987-1999
 
 ```{r}
 # Bind the data from 1987-1999
@@ -53,7 +53,7 @@ if(mr87_99$YYYY<100){
 head(mr87_99)
 ```
 
-## Bind the data from 2000 to 2006.
+## 1.2 Bind the data from 2000 to 2006
 
 ```{r}
 for (i in 2001:2004)
@@ -69,7 +69,7 @@ mr00_06 = rbind(mr00_06,mr_pre_2)
 tail(mr00_06)
 ```
 
-## Bind the data from 2012 to 2019
+## 1.3 Bind the data from 2012 to 2019
 
 ```{r}
 for (i in 2012:2019)
@@ -81,7 +81,7 @@ mr11_19 = mr11_19[-1,]
 head(mr11_19)
 ```
 
-# Bind the data from 2007 to 2010
+## 1.4 Bind the data from 2007 to 2010
 
 ```{r}
 mr_pre_3 = rbind(mr2007,mr2009)
@@ -111,7 +111,7 @@ mr_1 = rbind(mr87_99,mr00_06)
 colnames(mr_1)
 ```
 
-## Bind the data from 2007 to 2019
+## 1.5 Bind the data from 2007 to 2019
 
 ```{r}
 mr_2 = rbind(mr07_10,mr11_19)
@@ -131,7 +131,7 @@ names(mr_2)[names(mr_2) == "WDIR"] = "WD"
 head(mr_2)
 ```
 
-## Get the data from 1987 to 2019
+## 1.6 Get the data from 1987 to 2019
 
 So we bind mr_1 and mr_2 to get data from 1987-2019.
 
@@ -140,9 +140,97 @@ mr = rbind(mr_1,mr_2)
 head(mr)
 ```
 
-```{r}
+```{r eval=FALSE}
 # Download the file
 write.table(mr,file="C:/Users/CH.Meng/Desktop/buoy.txt",row.names=FALSE,col.names=TRUE,sep = ",")
 ```
 
 Now we finish the data collection.
+
+# 2 Exploratory Data Analysis
+## 2.1 Summary of the dataset
+
+Before making summary of the data, data type of certain columns should be transformed to numeric data.
+
+```{r}
+# Data type transformation
+for (i in 5:ncol(mr))
+  suppressMessages(
+    as.numeric(mr[,i])
+    )
+```
+
+Since "9999","999" and "99" in the dataset provide us with no specific information, we will replace those with NA.
+
+```{r}
+for (i in 1:ncol(mr))
+  mr[,i][which(mr[,i]==9999|mr[,i]==999|mr[,i]==99)] = NA
+
+
+```
+
+Now we can have the summary of the dataset-mr.
+```{r}
+# Summary of mr_tib
+mr_tib = as_tibble(mr)
+summary(mr_tib)
+```
+
+From the summary, we can see that there is no much variation in column WVHT, DPD, APD, MWD, DEWP, VIS and TIDE, and column PRES and BAR also contains a lot of NA's.
+
+Since those columns cannot provide us with a lot of information, we will drop them for further analysis.
+
+```{r}
+# Drop the columns
+mr_tib2 = mr_tib %>% 
+  select(-WVHT, -DPD, -APD, -MWD, -DEWP, -VIS,
+         -TIDE,-PRES,-BAR)
+dim(mr_tib2)
+```
+
+
+```{r}
+# Summary of mr_tib2
+summary(mr_tib2)
+```
+
+## 2.2 Imputation of the dataset
+
+First, we will make histograms to explore the distribution of the columns.
+
+### 2.2.1 Histograms of the columns
+```{r}
+# Hist. of WD
+ggplot(data = mr_tib2) + 
+  geom_histogram(mapping = aes(x=WD),binwidth = 10)
+```
+
+
+```{r}
+# Hist. of WSPD
+ggplot(data = mr_tib2) + 
+  geom_histogram(mapping = aes(x=WSPD),binwidth = 0.5)
+```
+
+
+```{r}
+# Hist. of GST
+ggplot(data = mr_tib2) + 
+  geom_histogram(mapping = aes(x=GST),binwidth = 0.5)
+```
+
+
+```{r}
+# Hist. of ATMP
+ggplot(data = mr_tib2) + 
+  geom_histogram(mapping = aes(x=ATMP),binwidth = 0.5)
+```
+
+
+```{r}
+# Hist. of WTMP
+ggplot(data = mr_tib2) + 
+  geom_histogram(mapping = aes(x=WTMP),binwidth = 0.5)
+```
+
+
