--- a/Buoy Project-Data import.Rmd
+++ b/Buoy Project-Data import.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Buoy Project"
-author: "Chenghao Meng"
+author: "Chenghao Meng,Yinfeng Zhou and Feng Fan"
 date: "2020/9/22"
 output: html_document
 ---
@@ -277,10 +277,16 @@ for (i in 1:4)
   suppressMessages(
     mr_tib2[,i] <- as.integer(unlist(mr_tib2[,i]))
     )
+
+# Solve the error caused by unknown reasons
+mr_tib2$YYYY[which(mr_tib2$YYYY==3899)] = 1999
 ```
 
-```{r}
-mr_tib2$YYYY[which(mr_tib2$YYYY==3899)] = 1999
+
+```{r message=FALSE}
+# Load the packages
+library(lubridate)
+library(ggpubr)
 ```
 
 Sort the dataset by quarter:
@@ -291,43 +297,44 @@ q1<-subset(mr_tib2,quarter(mr_tib2$date)==1)
 q2<-subset(mr_tib2,quarter(mr_tib2$date)==2)
 q3<-subset(mr_tib2,quarter(mr_tib2$date)==3)
 q4<-subset(mr_tib2,quarter(mr_tib2$date)==4)
-
 ```
+
+## 2.4 Explore the pattern
+
+### 2.4.1 Air temperature pattern
+
 Calculate each quarter's mean air temperature by year, and plot the patterns:
-```{r}
-#QUARTER 1
+```{r message=FALSE}
+# Quarter 1
 meanq1<-aggregate(ATMP~YYYY,data=q1, mean)
 q1reg<-ggplot(data = meanq1) + 
   geom_smooth(mapping = aes(x=YYYY,y=ATMP)) + 
-  ggtitle("Average Air Temperature of Q1")
+  ggtitle("Average Air Temp. of Q1")
 
-#QUARTER 2
+# Quarter 2
 meanq2<-aggregate(ATMP~YYYY,data=q2, mean)
 q2reg<-ggplot(data = meanq2) + 
   geom_smooth(mapping = aes(x=YYYY,y=ATMP)) + 
-  ggtitle("Average Air Temperature of Q2")
+  ggtitle("Average Air Temp. of Q2")
 
-#QUARTER 3
+# Quarter 3
 q3reg<-meanq3<-aggregate(ATMP~YYYY,data=q3, mean)
 q3reg<-ggplot(data = meanq3) + 
   geom_smooth(mapping = aes(x=YYYY,y=ATMP)) + 
-  ggtitle("Average Air Temperature of Q3")
+  ggtitle("Average Air Temp. of Q3")
 
-#QUARter 4
+# Quarter 4
 q4reg<-meanq4<-aggregate(ATMP~YYYY,data=q4, mean)
 q4reg<-ggplot(data = meanq4) + 
   geom_smooth(mapping = aes(x=YYYY,y=ATMP)) + 
-  ggtitle("Average Air Temperature of Q4")
-ggarrange(q1reg,q2reg,q3reg,q4reg,ncol=2,nrow=2)
+  ggtitle("Average Air Temp. of Q4")
 
+# Put the plots together
+ggarrange(q1reg,q2reg,q3reg,q4reg,ncol=2,nrow=2)
 ```
 
-
-
-
-
 Sort the dataset by month, calculate each month's mean air temperature by year, and plot the patterns:
-```{r}
+```{r message=FALSE}
 mname<-str_c('m',1:12)
 mmean<-str_c('meanm',1:12)
 mreg<-str_c('m',1:12,'reg')
@@ -337,15 +344,110 @@ for(i in 1:12){
   assign(mmean[i],aggregate(ATMP~YYYY,data=get(mname[i]), mean))
   assign(mreg[i],(ggplot(data = get(mmean[i])) + 
   geom_smooth(mapping = aes(x=YYYY,y=ATMP)) + 
-  ggtitle(paste("Average Air Temperature of M",i,sep=""))))
+  ggtitle(paste("Average Air Temp. of M",i,sep=""))))
 }
+```
+
+```{r message=FALSE}
+# Put the plots together
 ggarrange(m1reg,m2reg,m3reg,m4reg,ncol=2,nrow=2)
 ggarrange(m5reg,m6reg,m7reg,m8reg,ncol=2,nrow=2)
 ggarrange(m9reg,m10reg,m11reg,m12reg,ncol=2,nrow=2)
+```
 
+### 2.4.2 Water temperature pattern
 
+Calculate each quarter's mean water temperature by year, and plot the patterns:
+```{r message=FALSE}
+# Quarter 1
+meanq1_w<-aggregate(WTMP~YYYY,data=q1, mean)
+q1reg_w<-ggplot(data = meanq1_w) + 
+  geom_smooth(mapping = aes(x=YYYY,y=WTMP)) + 
+  ggtitle("Average Water Temp. of Q1")
 
+# Quarter 2
+meanq2_w<-aggregate(WTMP~YYYY,data=q2, mean)
+q2reg_w<-ggplot(data = meanq2_w) + 
+  geom_smooth(mapping = aes(x=YYYY,y=WTMP)) + 
+  ggtitle("Average Water Temp. of Q2")
 
+# Quarter 3
+meanq3_w<-aggregate(WTMP~YYYY,data=q3, mean)
+q3reg_w<-ggplot(data = meanq3_w) + 
+  geom_smooth(mapping = aes(x=YYYY,y=WTMP)) + 
+  ggtitle("Average Water Temp. of Q3")
 
+# Quarter 4
+meanq4_w<-aggregate(WTMP~YYYY,data=q4, mean)
+q4reg_w<-ggplot(data = meanq4_w) + 
+  geom_smooth(mapping = aes(x=YYYY,y=WTMP)) + 
+  ggtitle("Average Water Temp. of Q4")
+
+# Put the plots together
+ggarrange(q1reg_w,q2reg_w,q3reg_w,q4reg_w,ncol=2,nrow=2)
+```
+
+Sort the dataset by month, calculate each month's mean air temperature by year, and plot the patterns:
+```{r}
+mmean_w<-str_c('meanm_w',1:12)
+mreg_w<-str_c('m',1:12,'reg_w')
+
+for(i in 1:12){
+  assign(mname[i],subset(mr_tib2,month(mr_tib2$date)==i))
+  assign(mmean_w[i],aggregate(WTMP~YYYY,data=get(mname[i]), mean))
+  assign(mreg_w[i],(ggplot(data = get(mmean_w[i])) + 
+  geom_smooth(mapping = aes(x=YYYY,y=WTMP)) + 
+  ggtitle(paste("Aver. Water Temp. of M",i,sep=""))))
+}
+```
+
+```{r message=FALSE}
+# Put the plots together
+ggarrange(m1reg_w,m2reg_w,m3reg_w,m4reg_w,ncol=2,nrow=2)
+ggarrange(m5reg_w,m6reg_w,m7reg_w,m8reg_w,ncol=2,nrow=2)
+```
+
+# 3 Model Analysis
+
+Based on the result of pattern exploration in previous part, we are going to use linear model to fit the model between temperature and year.
+
+## 3.1 Air temperature
+```{r}
+# Fit the model of Air Temp.
+air_q1 = lm(ATMP~YYYY,data = meanq1)
+air_q2 = lm(ATMP~YYYY,data = meanq2)
+air_q3 = lm(ATMP~YYYY,data = meanq3)
+air_q4 = lm(ATMP~YYYY,data = meanq4)
+```
+
+```{r}
+data.frame(Quarter=c("Q1","Q2","Q3","Q4"),
+           Coef_AirTemp=c(air_q1$coefficients[2],
+                          air_q2$coefficients[2],
+                          air_q3$coefficients[2],
+                          air_q4$coefficients[2])
+           )
 
 ```
+
+## 3.2 Water Temperature
+```{r}
+# Fit the model of Air Temp.
+water_q1 = lm(WTMP~YYYY,data = meanq1_w)
+water_q2 = lm(WTMP~YYYY,data = meanq2_w)
+water_q3 = lm(WTMP~YYYY,data = meanq3_w)
+water_q4 = lm(WTMP~YYYY,data = meanq4_w)
+```
+
+```{r}
+data.frame(Quarter=c("Q1","Q2","Q3","Q4"),
+           Coef_WaterTemp=c(water_q1$coefficients[2],
+                          water_q2$coefficients[2],
+                          water_q3$coefficients[2],
+                          water_q4$coefficients[2])
+           )
+```
+
+## 3.3 Conclusion
+
+From the result, we can have the conclusion that as years goes by, the air and water temperature are getting higher, which would be an indicator of climate change.
